--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,16 @@ jobs:
         startsWith(github.event.workflow_run.head_commit.message, 'refactor')
       )
     steps:
+      - name: Generate token
+        id: generate_token
+        uses: tibdex/github-app-token@v1
+        with:
+          app_id: ${{ secrets.RELEASE_APP_ID }}
+          private_key: ${{ secrets.RELEASE_APP_PEM }}
       - uses: actions/checkout@v3
+        with:
+          token: ${{ steps.get_token.outputs.app_token }}
+          fetch-depth: 0
       - uses: actions/setup-node@v3
         with:
           node-version: 16
