--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "axios": "1.2.0",
     "babel-loader": "9.1.0",
     "chromatic": "6.11.4",
+    "date-fns": "2.29.3",
     "esbuild": "0.15.16",
     "eslint": "8.28.0",
     "eslint-config-prettier": "8.5.0",
@@ -79,7 +80,6 @@
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-yaml": "0.5.0",
-    "focus-visible": "5.2.0",
     "glob": "8.0.3",
     "husky": "8.0.2",
     "jest": "27.5.1",
@@ -108,8 +108,7 @@
     "stylelint-scss": "4.3.0",
     "ts-node": "10.9.1",
     "typescript": "4.9.3",
-    "yargs": "17.6.2",
-    "date-fns": "2.29.3"
+    "yargs": "17.6.2"
   },
   "resolutions": {
     "**/@types/react": "16.14.34"
