--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@storybook/addon-interactions": "6.5.15",
     "@storybook/html": "6.5.15",
     "@storybook/jest": "0.0.10",
+    "@storybook/preset-scss": "1.0.3",
     "@storybook/testing-library": "0.0.13",
     "@types/jest": "27.5.2",
     "@types/puppeteer": "5.4.7",
@@ -72,6 +73,7 @@
     "axios": "1.2.1",
     "babel-loader": "9.1.0",
     "chromatic": "6.14.0",
+    "css-loader": "5.2.7",
     "date-fns": "2.29.3",
     "esbuild": "0.16.10",
     "eslint": "8.30.0",
@@ -97,11 +99,14 @@
     "puppeteer": "19.4.1",
     "react": "16.14.0",
     "react-dom": "16.14.0",
+    "sass": "1.57.1",
+    "sass-loader": "10.4.1",
     "shelljs": "0.8.5",
     "simple-git": "3.15.1",
     "standard-version": "9.5.0",
     "stencil-inline-svg": "1.1.0",
     "storybook-addon-breakpoints": "1.0.0",
+    "style-loader": "2.0.0",
     "stylelint": "14.16.0",
     "stylelint-config-prettier-scss": "0.0.1",
     "stylelint-config-standard-scss": "6.1.0",
