chore: include refactorings and performance in CHANGELOG.md

--- a/package.json
+++ b/package.json
@@ -152,7 +152,7 @@
       },
       {
         "type": "refactor",
-        "hidden": "Refactor"
+        "section": "Refactorings"
       },
       {
         "type": "perf",
