--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,10 @@ jobs:
     env:
       IMAGE_REPO: ghcr.io/${{ github.repository }}/storybook
     steps:
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
       - name: Generate token
         id: generate_token
         uses: tibdex/github-app-token@v1
