--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ jobs:
     if: >
       github.event.workflow_run.event == 'push' &&
       github.event.workflow_run.conclusion == 'success' &&
+      github.event.workflow_run.head_sha == github.sha &&
       (
         startsWith(github.event.workflow_run.head_commit.message, 'docs') ||
         startsWith(github.event.workflow_run.head_commit.message, 'feat') ||
@@ -26,10 +27,6 @@ jobs:
     env:
       IMAGE_REPO: ghcr.io/${{ github.repository }}/storybook
     steps:
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
       - name: Generate token
         id: generate_token
         uses: tibdex/github-app-token@v1
