--- a/.github/ISSUE_TEMPLATE/contributing-request.yml
+++ b/.github/ISSUE_TEMPLATE/contributing-request.yml
@@ -1,7 +1,7 @@
-name: Feature request or enhancement
-description: Request for a new component or enhancement of a component
-title: '[Feature request]: '
-labels: ['type: feature-request 💡']
+name: Request for contributing
+description: Request for contributing a new component or enhancement of a component
+title: '[Contributing request]: '
+labels: 'type: contributing-request 🔨'
 assignees:
   - octocat
 body:
@@ -23,10 +23,10 @@ body:
   - type: dropdown
     id: new-or-enhancement
     attributes:
-      label: Request type
+      label: Contribution type
       options:
-        - 'Request for a new component'
-        - 'Request for enhancement of a component'
+        - 'Contribute a new component'
+        - 'Contribute an enhancement of a component'
     validations:
       required: true
   - type: dropdown
@@ -41,9 +41,9 @@ body:
     validations:
       required: true
   - type: textarea
-    id: request
+    id: feature-description
     attributes:
-      label: Functionality
+      label: Feature Description
       description: For what purpose is the component used? What features does it need to have? Which component should be enhanced?
     validations:
       required: true
@@ -54,3 +54,23 @@ body:
       description: Figma-Link
     validations:
       required: false
+  - type: textarea
+    id: api-proposal
+    attributes:
+      label: Please describe the required properties (with type and value) for the component
+      value: |
+        Example:
+        variant (string): "primary" | "secondary" | "translucent" | "transparent"
+        size (string):  "s" | "m" | "l"
+  - type: textarea
+    id: markup-proposal
+    attributes:
+      label: Please send a proposal for a html markup
+      description: This input will be automatically formatted into html.
+      render: html
+      value: |
+        Example: 
+        <sbb-button>
+          <sbb-icon slot="icon" name="info"></sbb-icon>
+          Label
+        </sbb-button>
