feat(sbb-button): replace variant `translucent` by `tertiary`
BREAKING CHANGE:
`tranclucent` variant was removed and replaced by
a new `tertiary` button variant.

--- a/.github/ISSUE_TEMPLATE/contributing-request.yml
+++ b/.github/ISSUE_TEMPLATE/contributing-request.yml
@@ -60,7 +60,7 @@ body:
       label: Please describe the required properties (with type and value) for the component
       value: |
         Example:
-        variant (string): "primary" | "secondary" | "translucent" | "transparent"
+        variant (string): "primary" | "secondary" | "tertiary" | "transparent"
         size (string):  "s" | "m" | "l"
   - type: textarea
     id: markup-proposal
@@ -69,7 +69,7 @@ body:
       description: This input will be automatically formatted into html.
       render: html
       value: |
-        Example: 
+        Example:
         <sbb-button>
           <sbb-icon slot="icon" name="info"></sbb-icon>
           Label
